cmake_minimum_required(VERSION 3.6)
project(CompProgramming)

set(CMAKE_CXX_STANDARD 11)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=stdlibc++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

#set(SOURCE_FILES uva245.cpp)
#set(SOURCE_FILES uva245.cpp dfs_traversal.cpp)
#set(SOURCE_FILES bfs_traversal.cpp)
#set(SOURCE_FILES dfs_floodfill.cpp)
#set(SOURCE_FILES topological_sort.cpp)
#set(SOURCE_FILES bipartite_graph.cpp)
#set(SOURCE_FILES uva507.cpp ABA12C.cpp)
#set(SOURCE_FILES HackerRank/FIBOMOD.cpp)
#set(SOURCE_FILES HackerRank/CANDIES.cpp)
#set(SOURCE_FILES HackerRank/MAXSUBARRAY.cpp)
#set(SOURCE_FILES UVA10684.cpp)
#set(SOURCE_FILES SPOJ/MREPLBRC.cpp)
#set(SOURCE_FILES HackerEarth/Comrades2.cpp)
#set(SOURCE_FILES uva245.cpp)
#set(SOURCE_FILES dfs_traversal.cpp)
#set(SOURCE_FILES HackerEarth/Comrades2.cpp)
#set(SOURCE_FILES LeetCode/TWOSUM.cpp)
#set(SOURCE_FILES LeetCode/SINGLENUM.cpp)
#set(SOURCE_FILES SPOJ/LIFEUNIVERSE.cpp)
#set(SOURCE_FILES SPOJ/PERMUTE.cpp)
set(SOURCE_FILES LeetCode/LETTERCOMBO.cpp)

add_executable(CompProgramming ${SOURCE_FILES})